# mandelbrot

./: .gitignore  CMakeLists.txt  README.md
include/: shader.hpp
include/glad/: glad.h
shaders/: shader.frag
src/: app.cpp  glad.c  shader.cpp
